# rusty-safe

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  CLAUDE.reth.md  CLAUDE.revm.md  Cargo.toml  Dockerfile.build  Dockerfile.local  PRODUCTION_HARDENING.md  README.md  SPEC.md  TEST_COVERAGE_REQUIREMENTS.md  VERIFY.md  rust-toolchain.toml  serve.sh
.github/workflows/: deploy-local-no-attestation.yml  deploy.yml  prd05a-signing-gates.yml
crates/rusty-safe/: Cargo.toml  Trunk.toml  build.rs  index.html
crates/rusty-safe-signing-adapters/: Cargo.toml
crates/rusty-safe-signing-adapters/src/: abi.rs  clock.rs  config.rs  crypto.rs  eip1193.rs  execute.rs  hashing.rs  lib.rs  preflight.rs  queue.rs  safe_service.rs  wc.rs
crates/rusty-safe-signing-adapters/tests/: abi_builder.rs  hashing_adapter.rs  import_export_merge.rs  message_e2e.rs  parity_differential.rs  performance_budget.rs  provider_recovery.rs  queue_lock.rs  runtime_adapters.rs  tx_e2e.rs  tx_manual_signature.rs  url_import_compat.rs  wc_deferred.rs  wc_session_lifecycle.rs
crates/rusty-safe-signing-adapters/tests/common/: mod.rs
crates/rusty-safe-signing-core/: Cargo.toml
crates/rusty-safe-signing-core/src/: domain.rs  lib.rs  orchestrator.rs  ports.rs  state_machine.rs
crates/rusty-safe-signing-core/tests/: domain_serialization.rs  state_machine_transitions.rs
crates/rusty-safe/src/: api.rs  app.rs  expected.rs  hasher.rs  main.rs  sidebar.rs  signing_bridge.rs  state.rs  ui.rs  validation.rs
crates/rusty-safe/src/decode/: compare.rs  mod.rs  offline.rs  parser.rs  sourcify.rs  types.rs  ui.rs  verify.rs
crates/rusty-safe/src/signing_ui/: import_export.rs  message_details.rs  mod.rs  queue.rs  state.rs  tx_details.rs  wc_requests.rs
e2e/: UI_LOOP.md  capture.sh  package-lock.json  package.json  playwright.config.ts  playwright.metamask.config.ts  playwright.wallet-mock.config.ts
e2e/tests/: capture.spec.ts  visual.spec.ts
e2e/tests/metamask/: failure-taxonomy.contract.test.mjs  failure-taxonomy.mjs  metamask-bootstrap.mjs  metamask-cache-preflight.mjs  metamask-eip1193.spec.mjs  metamask-patched-fixtures.mjs  runtime-profile-check.mjs  scenario-manifest.mjs  wallet-driver.contract.test.mjs
e2e/tests/metamask/drivers/: dappwright-driver.mjs  driver-factory.mjs  mixed-driver.mjs  synpress-driver.mjs  wallet-driver.mjs
e2e/tests/schemas/: c5e2e-v1.schema.json
e2e/tests/wallet-mock/: failure-taxonomy.contract.test.mjs  failure-taxonomy.mjs  runtime-preflight.contract.test.mjs  runtime-profile-check.mjs  scenario-manifest.mjs  validate-evidence-schema.mjs  wallet-driver.contract.test.mjs  wallet-mock-eip1193.spec.mjs
e2e/tests/wallet-mock/drivers/: wallet-driver.mjs  wallet-mock-driver.mjs
e2e/wallet-setup/: metamask.anvil.setup.mjs
fixtures/signing/abi/: abi_transfer_fixture.json
fixtures/signing/localsafe/: abi_transfer_exported.json  message_lifecycle_exported.json  tx_lifecycle_exported.json  url_keys_exported.json  wc_session_lifecycle_exported.json
fixtures/signing/message/: message_lifecycle_basic.json
fixtures/signing/tx/: tx_lifecycle_basic.json
fixtures/signing/url/: url_keys_fixture.json
fixtures/signing/wc/: wc_session_lifecycle_basic.json
local/reports/prd05a/: A0-boundary-bootstrap.md  A1-boundary-checks.md  A2-tx-parity-report.md  A3-message-parity-report.md  A4-wc-parity-report.md  C10-release-evidence-summary.md  C5-compatibility-matrix-report.md  C5-dappwright-investigation.md  C5-hardware-passthrough-smoke.md  C6-performance-report.md  C9-differential-parity-report.md  parity-traceability.md
prds/: 05-PRD-WASM-EIP1193-PARITY-ARCHITECTURE.md  05A-CONTINUATION-MILESTONES.md  05A-E2E-REAL-WALLET-HARDWARE-TRACK.md  05A-E2E-WALLET-RUNTIME-PLAN.md  05A-M4-BRANCH-CLOSURE-REPORT.md  05A-M6-BRANCH-CLOSURE-REPORT.md  05A-PRD-PARITY-WAVE.md  05A-RELEASE-GATE-CHECKLIST.md  05B-PRD-HARDENING-WAVE.md  05B-WALLET-MOCK-FUZZ-HARDENING-PLAN.md  LOCALSAFE_SIGNING_FLOW_AND_CAPABILITIES.md  README.md
scripts/: check_prd05a_phase_discipline.sh  check_prd05a_traceability.sh  check_signing_boundaries.sh  run_prd05a_compat_matrix.sh  run_prd05a_differential.sh  run_prd05a_driver_comparison.sh  run_prd05a_hardware_smoke.sh  run_prd05a_manual_metamask_checklist.sh  run_prd05a_metamask_canary.sh  run_prd05a_metamask_e2e.sh  run_prd05a_metamask_soak.sh  run_prd05a_performance.sh  run_prd05a_rabby_matrix.sh  run_prd05a_release_evidence.sh  run_prd05a_safe_service_live.sh  run_prd05a_wallet_mock_determinism.sh  run_prd05a_wallet_mock_gate.sh  run_prd05a_wallet_mock_preflight.sh  run_prd05a_wallet_mock_replay.sh  run_prd05a_wallet_mock_runtime_slo.sh  run_prd05a_wallet_mock_soak.sh
scripts/lib/: prd05a_e2e_common.sh
