[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/example/rusty-safe"

[workspace.dependencies]
# GUI
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }

# Safe hash computation (brings alloy as transitive dependency)
safe-utils = { git = "https://github.com/Cyfrin/safe-hash-rs" }

# Async + HTTP - match safe-hash-rs
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
reqwest = { version = "0.12.2", default-features = false, features = ["json", "rustls-tls"] }

# Serialization - pin to 1.0.218 for alloy compatibility
serde = { version = "=1.0.218", features = ["derive"] }
serde_json = "1"

# Utils
thiserror = "2"
semver = "1"
arboard = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
strip = true

