[package]
name = "rusty-safe-signing-adapters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rusty-safe-signing-core = { path = "../rusty-safe-signing-core" }
alloy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
reqwest.workspace = true
