[package]
name = "rusty-safe-signing-adapters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rusty-safe-signing-core = { path = "../rusty-safe-signing-core" }
alloy.workspace = true
safe-utils.workspace = true
safe-hash.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
base64 = "0.22"
web-time = "1.1"
argon2 = { version = "0.5", features = ["std"] }
pbkdf2 = "0.12"
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
aes-gcm = "0.10"
getrandom = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window"] }

[dev-dependencies]
tiny_http = "0.12"
