[package]
name = "rusty-safe"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

description = "A Rust-native Safe{Wallet} transaction verification GUI"

[[bin]]
name = "rusty-safe"
path = "src/main.rs"

[dependencies]
# GUI
eframe.workspace = true
egui.workspace = true

# Safe hash computation (provides alloy re-exports)
safe-utils.workspace = true

# Async + HTTP
tokio.workspace = true
reqwest.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Utils
thiserror.workspace = true
semver.workspace = true
arboard.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

