[package]
name = "rusty-safe"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

description = "A Rust-native Safe{Wallet} transaction verification GUI"

[[bin]]
name = "rusty-safe"
path = "src/main.rs"

[dependencies]
# GUI
eframe.workspace = true
egui.workspace = true

# Safe hash computation
safe-utils.workspace = true
safe-hash.workspace = true

# Ethereum primitives
alloy.workspace = true

# Async + HTTP
reqwest.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Utils
thiserror.workspace = true
eyre.workspace = true
semver.workspace = true

# Logging
tracing.workspace = true

# Native-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio.workspace = true
arboard.workspace = true
tracing-subscriber.workspace = true
open = "5"

# WASM-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlCanvasElement", "Navigator", "Clipboard", "console"] }
tracing-wasm = "0.2"
getrandom = { version = "0.2", features = ["js"] }

[build-dependencies]
chrono = "0.4.42"
